[gd_scene load_steps=27 format=2]

[ext_resource path="res://assets/spritesheets/bingling_roll_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://assets/spritesheets/bingling_spritesheet.png" type="Texture" id=2]
[ext_resource path="res://scripts/weapons/Bingling.gd" type="Script" id=3]
[ext_resource path="res://assets/spritesheets/bingling_death_spritesheet.png" type="Texture" id=4]
[ext_resource path="res://assets/img/shadow_small.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 7.17842

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 10.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "roll",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=21]
radius = 36.5448

[node name="Bingling" type="Area2D" groups=[
"treadmill",
]]
position = Vector2( 0, -3 )
collision_mask = 5
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ShadowSprite" type="Sprite" parent="."]
position = Vector2( 0, 3.44326 )
texture = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -8.04334, -10.1647 )
frames = SubResource( 12 )
frame = 2
playing = true
centered = false

[node name="ExplosionSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -16, -16 )
frames = SubResource( 20 )
centered = false

[node name="TargettingTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="ExpiryTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="AOE" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AOE"]
shape = SubResource( 21 )

[connection signal="body_entered" from="." to="." method="_on_Bingling_body_entered"]
[connection signal="animation_finished" from="ExplosionSprite" to="." method="_on_ExplosionSprite_animation_finished"]
[connection signal="timeout" from="ExpiryTimer" to="." method="_on_ExpiryTimer_timeout"]
